--- a/Views/Partials/blocklist/Components/AboutCallbackSection.cshtml
+++ b/Views/Partials/blocklist/Components/AboutCallbackSection.cshtml
@@ -11,7 +11,7 @@
 }
 
 <section class="py-[4rem]">
-    <div class="max-w-7xl mx-auto px-4 flex gap-10">
+    <div class="max-w-7xl mx-auto px-4 flex flex-col gap-10">
 
         <div class="flex flex-col w-7/12">
             <div class="rte aboutUs">
