--- a/Views/Partials/blocklist/Components/HeroSection.cshtml
+++ b/Views/Partials/blocklist/Components/HeroSection.cshtml
@@ -9,13 +9,13 @@
 	<div class="absolute inset-0">
 		@if (@content.HeroBgImage != null)
 		{
-			<img src="@content.HeroBgImage.Url()" class="w-full h-full object-cover" />
+			<img src="@content.HeroBgImage.Url()" class="hidden md:block  md:h-full md:object-cover" />
 		}
 
 	</div>
 
 	<div class="max-w-7xl mx-auto px-4 relative z-10">
-		<div class="w-5/10 flex flex-col gap-8">
+		<div class="md:w-5/10 flex flex-col gap-8">
 			<h1 class="leading-none">@content.HeroTitle</h1>
 			<div class="rte">@Html.Raw(content.HeroText)</div>
 			@if (content.HeroLink != null)
