--- a/Views/Partials/blocklist/Components/AboutCallbackSection.cshtml
+++ b/Views/Partials/blocklist/Components/AboutCallbackSection.cshtml
@@ -11,9 +11,9 @@
 }
 
 <section class="py-[4rem]">
-    <div class="max-w-7xl mx-auto px-4 flex flex-col gap-10">
+    <div class="max-w-7xl mx-auto px-4 flex flex-col lg:flex-row gap-10">
 
-        <div class="flex flex-col w-7/12">
+        <div class="flex flex-col lg:w-7/12">
             <div class="rte aboutUs">
                 @Html.Raw(content.AboutCallbackSectionBody)
             </div>
@@ -21,7 +21,8 @@
         
        
 
-        <div class="flex flex-col w-5/12 shadow-md -mt-[8rem] z-99">
+
+        <div class="w-full lg:w-5/12 shadow-md lg:-mt-32 z-[99]">
             <div class="bg-primary">
                 <p class="text-white py-[1.5rem] px-[2rem] text-[1.875rem] font-bold">@content.FormTitle</p>
 
