--- a/Views/Partials/blocklist/Components/PartnersSection.cshtml
+++ b/Views/Partials/blocklist/Components/PartnersSection.cshtml
@@ -6,7 +6,7 @@
 
 }
 <section class="bg-neutral">
-    <div class="max-w-7xl mx-auto px-4 gap-[4rem] mt-[10rem] mb-4 flex items-center justify-center">
+    <div class="max-w-7xl mx-auto px-4 gap-[4rem] mt-[2rem] md:mt-[10rem] mb-4 flex flex-col items-center md:flex-row justify-center">
         @if (@content?.Freedombird != null)
         {
             <div>
