--- a/Views/Partials/blocklist/Components/HeroSection.cshtml
+++ b/Views/Partials/blocklist/Components/HeroSection.cshtml
@@ -4,7 +4,7 @@
     var content = (ContentModels.HeroSection)Model.Content;
 }
 
-<section class="relative py-[7rem]">
+<section class="relative bg-white-100 py-[2rem] md:py-[7rem]">
 
 	<div class="absolute inset-0">
 		@if (@content.HeroBgImage != null)
