--- a/Views/Partials/blocklist/Components/ContactSection.cshtml
+++ b/Views/Partials/blocklist/Components/ContactSection.cshtml
@@ -33,7 +33,7 @@
                 <img src="@content?.ContactSectionContactPersonImage.Url()" class="absolute bottom-0 z-10 w-auto max-h-[650px] object-cover" />
             }
         </div>
-        <div class="flex flex-col gap-6 justify-center lg:w-4/5 w-full lg:text-left">
+        <div class="flex flex-col gap-6 justify-center lg:w-4/5 w-full lg:text-left mb-4">
             <div class="leading-none lg:text-left text-center mb-6">
                 @Html.Raw(content?.ContactSectionTitle)
             </div>
