--- a/Views/ServiceDetail.cshtml
+++ b/Views/ServiceDetail.cshtml
@@ -14,15 +14,15 @@
 
 
 <section class="pt-16">
-	<div class="max-w-7xl mx-auto px-4">
-		<div class="flex flex-row justify-between">
-			<aside class="w-3/12 flex flex-col gap-10">
+	<div class="max-w-7xl mx-auto px-4 ">
+		<div class="flex flex-col-reverse lg:flex-row lg:justify-between gap-10">
+			<aside class="lg:w-3/12 w-full flex flex-col gap-10">
 				@Html.GetBlockListHtml(Model.ServiceDetailAsides)
 			</aside>
 
-			<div class="block w-px bg-border-gray"></div>
+			<div class="hidden lg:block w-px bg-border-gray"></div>
 
-			<div class="w-8/12 flex flex-col gap-2">
+			<div class="lg:w-8/12  w-full flex flex-col gap-2">
 
 				<div class="rte">@Html.Raw(Model.ServiceDetailBody)</div>
 			</div>
