contact page responsivity

--- a/Views/Partials/blocklist/Components/ContactCallbackSection.cshtml
+++ b/Views/Partials/blocklist/Components/ContactCallbackSection.cshtml
@@ -14,8 +14,8 @@
 <section class="relative bg-primary bg-no-repeat bg-center bg-cover min-h-[700px] flex items-center"
          style="background-image: url('/images/map_1.svg');">
     
-    <div class="w-full px-6 lg:px-12">
-        <div class="bg-neutral w-full max-w-6xl mx-auto rounded-lg shadow-lg p-10 z-10 -mb-90">
+    <div class="w-full my-2 px-6 lg:px-12">
+        <div class="bg-neutral w-full max-w-6xl mx-auto rounded-lg shadow-lg p-10 z-10 lg:-mb-90">
 
             <div class="flex flex-col gap-3 text-center mb-8 mx-auto max-w-lg">
                 <span>@content.ContactCallbackSectionLabel</span>
