--- a/Views/Partials/Forms/_CallbackForm.cshtml
+++ b/Views/Partials/Forms/_CallbackForm.cshtml
@@ -6,7 +6,7 @@
 
 @using (Html.BeginUmbracoForm("HandleCallbackForm", "Form", FormMethod.Post, new { noValidate = "novalidate", id = "callbackForm" }))
 {
-    <div class="px-8 @(isContactPage ? "grid grid-cols-2 gap-6" : "flex flex-col gap-6")">
+    <div class="px-8  @(isContactPage ? "flex flex-col gap-2 md:grid md:grid-cols-2 md:gap-6" : "flex flex-col gap-6")">
         <div>
             <label asp-for="Name" class="sr-only"></label>
             <input asp-for="Name" type="text" placeholder="@Html.DisplayNameFor(x => x.Name)" class="w-full p-3 italic border border-gray-300 focus:ring-2 focus:ring-primary focus:outline-none" />
@@ -41,7 +41,7 @@
             </div>
             <span asp-validation-for="SelectedOption"></span>
         </div>
-        <div class="pb-10 @(isContactPage ? "col-span-2 flex justify-center" : "")">
+        <div class="lg:pb-10 pt-6 @(isContactPage ? "col-span-2 flex justify-center" : "")">
             <button class="btn @(isContactPage ? "primary-btn" : "secondary-btn w-full")" type="submit">Submit</button>
         </div>
     </div>
