styling in service section title

--- a/Views/Partials/blocklist/Components/ServiceSection.cshtml
+++ b/Views/Partials/blocklist/Components/ServiceSection.cshtml
@@ -21,7 +21,7 @@
             {
                 <h2 class="label">@content.ServiceLabel</h2>
             }
-            <div class="rte">@Html.Raw(content.ServiceTitle)</div>
+            <div class="rte leading-none">@Html.Raw(content.ServiceTitle)</div>
         </div>
         @if(items.Any())
         {
