removed semicolon in homepage and servicepage

--- a/Views/ServicePage.cshtml
+++ b/Views/ServicePage.cshtml
@@ -4,4 +4,4 @@
 	Layout = "mainLayout.cshtml";
 }
 <partial name="partials/Layout/_PageHeader" model="(IPageHeader)Model" />
-@Html.GetBlockListHtml(Model.Sections);
+@Html.GetBlockListHtml(Model.Sections)
