fix paddings in partners section

--- a/Views/Partials/Forms/_CallbackForm.cshtml
+++ b/Views/Partials/Forms/_CallbackForm.cshtml
@@ -41,7 +41,7 @@
             </div>
             <span asp-validation-for="SelectedOption"></span>
         </div>
-        <div class="lg:pb-10 pt-6 @(isContactPage ? "col-span-2 flex justify-center" : "")">
+        <div class="pb-10 pt-6 @(isContactPage ? "col-span-2 flex justify-center" : "")">
             <button class="btn @(isContactPage ? "primary-btn" : "secondary-btn w-full")" type="submit">Submit</button>
         </div>
     </div>
