--- a/Views/mainLayout.cshtml
+++ b/Views/mainLayout.cshtml
@@ -25,7 +25,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@title</title>
-
+    <link rel="icon" type="image/svg+xml" href="~/favicon-Onatrix.svg" />
     <!-- Font Awesome CDN -->
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
