--- a/wwwroot/css/output.css
+++ b/wwwroot/css/output.css
@@ -244,9 +244,6 @@
   .absolute {
     position: absolute;
   }
-  .fixed {
-    position: fixed;
-  }
   .relative {
     position: relative;
   }
@@ -279,9 +276,6 @@
   }
   .z-10 {
     z-index: 10;
-  }
-  .z-99 {
-    z-index: 99;
   }
   .z-\[99\] {
     z-index: 99;
@@ -337,9 +331,6 @@
   .my-6 {
     margin-block: calc(var(--spacing) * 6);
   }
-  .-mt-\[8rem\] {
-    margin-top: calc(8rem * -1);
-  }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
@@ -352,9 +343,6 @@
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
   }
-  .mt-8 {
-    margin-top: calc(var(--spacing) * 8);
-  }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
   }
@@ -363,12 +351,6 @@
   }
   .mt-\[5rem\] {
     margin-top: 5rem;
-  }
-  .mt-\[10rem\] {
-    margin-top: 10rem;
-  }
-  .-mb-90 {
-    margin-bottom: calc(var(--spacing) * -90);
   }
   .mb-0 {
     margin-bottom: calc(var(--spacing) * 0);
@@ -388,14 +370,8 @@
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
   }
-  .mb-15 {
-    margin-bottom: calc(var(--spacing) * 15);
-  }
   .mb-\[4rem\] {
     margin-bottom: 4rem;
-  }
-  .mb-\[6rem\] {
-    margin-bottom: 6rem;
   }
   .ml-1 {
     margin-left: calc(var(--spacing) * 1);
@@ -412,6 +388,9 @@
   .block {
     display: block;
   }
+  .contents {
+    display: contents;
+  }
   .flex {
     display: flex;
   }
@@ -421,17 +400,20 @@
   .hidden {
     display: none;
   }
-  .table {
-    display: table;
-  }
   .h-4 {
     height: calc(var(--spacing) * 4);
   }
   .h-8 {
     height: calc(var(--spacing) * 8);
   }
+  .h-16 {
+    height: calc(var(--spacing) * 16);
+  }
   .h-64 {
     height: calc(var(--spacing) * 64);
+  }
+  .h-\[50px\] {
+    height: 50px;
   }
   .h-\[220px\] {
     height: 220px;
@@ -445,6 +427,15 @@
   .h-full {
     height: 100%;
   }
+  .max-h-16 {
+    max-height: calc(var(--spacing) * 16);
+  }
+  .max-h-\[50px\] {
+    max-height: 50px;
+  }
+  .max-h-\[100px\] {
+    max-height: 100px;
+  }
   .max-h-\[650px\] {
     max-height: 650px;
   }
@@ -454,14 +445,8 @@
   .min-h-\[350px\] {
     min-height: 350px;
   }
-  .min-h-\[600px\] {
-    min-height: 600px;
-  }
   .min-h-\[700px\] {
     min-height: 700px;
-  }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
   }
   .w-1\/3 {
     width: calc(1/3 * 100%);
@@ -469,41 +454,23 @@
   .w-1\/4 {
     width: calc(1/4 * 100%);
   }
-  .w-2\/3 {
-    width: calc(2/3 * 100%);
-  }
-  .w-3\/12 {
-    width: calc(3/12 * 100%);
-  }
   .w-4 {
     width: calc(var(--spacing) * 4);
   }
-  .w-4\/5 {
-    width: calc(4/5 * 100%);
+  .w-10 {
+    width: calc(var(--spacing) * 10);
   }
-  .w-5\/10 {
-    width: calc(5/10 * 100%);
+  .w-16 {
+    width: calc(var(--spacing) * 16);
   }
-  .w-5\/12 {
-    width: calc(5/12 * 100%);
-  }
-  .w-6\/15 {
-    width: calc(6/15 * 100%);
-  }
-  .w-7\/12 {
-    width: calc(7/12 * 100%);
-  }
-  .w-7\/15 {
-    width: calc(7/15 * 100%);
-  }
-  .w-8\/12 {
-    width: calc(8/12 * 100%);
+  .w-70 {
+    width: calc(var(--spacing) * 70);
   }
   .w-90 {
     width: calc(var(--spacing) * 90);
   }
-  .w-\[40rem\] {
-    width: 40rem;
+  .w-\[50px\] {
+    width: 50px;
   }
   .w-auto {
     width: auto;
@@ -514,9 +481,6 @@
   .w-px {
     width: 1px;
   }
-  .max-w-2xl {
-    max-width: var(--container-2xl);
-  }
   .max-w-3xl {
     max-width: var(--container-3xl);
   }
@@ -526,20 +490,17 @@
   .max-w-7xl {
     max-width: var(--container-7xl);
   }
+  .max-w-\[50px\] {
+    max-width: 50px;
+  }
+  .max-w-\[100px\] {
+    max-width: 100px;
+  }
   .max-w-full {
     max-width: 100%;
   }
   .max-w-lg {
     max-width: var(--container-lg);
-  }
-  .max-w-md {
-    max-width: var(--container-md);
-  }
-  .max-w-xl {
-    max-width: var(--container-xl);
-  }
-  .flex-1 {
-    flex: 1;
   }
   .flex-shrink-0 {
     flex-shrink: 0;
@@ -556,23 +517,11 @@
   .appearance-none {
     appearance: none;
   }
-  .grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-  .grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-  .grid-cols-21 {
-    grid-template-columns: repeat(21, minmax(0, 1fr));
-  }
   .flex-col {
     flex-direction: column;
   }
   .flex-col-reverse {
     flex-direction: column-reverse;
-  }
-  .flex-row {
-    flex-direction: row;
   }
   .flex-wrap {
     flex-wrap: wrap;
@@ -631,9 +580,6 @@
   .rounded {
     border-radius: 0.25rem;
   }
-  .rounded-full {
-    border-radius: calc(infinity * 1px);
-  }
   .rounded-lg {
     border-radius: var(--radius-lg);
   }
@@ -678,17 +624,11 @@
   .bg-dark {
     background-color: var(--color-dark);
   }
-  .bg-gray-400 {
-    background-color: var(--color-gray-400);
-  }
   .bg-green-50 {
     background-color: var(--color-green-50);
   }
   .bg-neutral {
     background-color: var(--color-neutral);
-  }
-  .bg-notel {
-    background-color: var(--color-notel);
   }
   .bg-primary {
     background-color: var(--color-primary);
@@ -698,9 +638,6 @@
   }
   .bg-transparent {
     background-color: transparent;
-  }
-  .bg-white {
-    background-color: var(--color-white);
   }
   .bg-white-100 {
     background-color: var(--color-white-100);
@@ -716,6 +653,9 @@
   }
   .bg-no-repeat {
     background-repeat: no-repeat;
+  }
+  .object-contain {
+    object-fit: contain;
   }
   .object-cover {
     object-fit: cover;
@@ -735,17 +675,11 @@
   .p-6 {
     padding: calc(var(--spacing) * 6);
   }
-  .p-8 {
-    padding: calc(var(--spacing) * 8);
-  }
   .p-10 {
     padding: calc(var(--spacing) * 10);
   }
   .p-\[1\.5rem\] {
     padding: 1.5rem;
-  }
-  .p-\[2rem\] {
-    padding: 2rem;
   }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
@@ -762,20 +696,11 @@
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
   }
-  .px-12 {
-    padding-inline: calc(var(--spacing) * 12);
-  }
   .px-\[2rem\] {
     padding-inline: 2rem;
   }
-  .py-2 {
-    padding-block: calc(var(--spacing) * 2);
-  }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
-  }
-  .py-10 {
-    padding-block: calc(var(--spacing) * 10);
   }
   .py-12 {
     padding-block: calc(var(--spacing) * 12);
@@ -792,12 +717,6 @@
   .py-\[4rem\] {
     padding-block: 4rem;
   }
-  .py-\[7rem\] {
-    padding-block: 7rem;
-  }
-  .pt-2 {
-    padding-top: calc(var(--spacing) * 2);
-  }
   .pt-3 {
     padding-top: calc(var(--spacing) * 3);
   }
@@ -807,20 +726,11 @@
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
   }
-  .pt-12 {
-    padding-top: calc(var(--spacing) * 12);
-  }
   .pt-16 {
     padding-top: calc(var(--spacing) * 16);
   }
-  .pt-\[1rem\] {
-    padding-top: 1rem;
-  }
   .pt-\[2rem\] {
     padding-top: 2rem;
-  }
-  .pt-\[4rem\] {
-    padding-top: 4rem;
   }
   .pr-10 {
     padding-right: calc(var(--spacing) * 10);
@@ -896,10 +806,6 @@
     --tw-leading: 1;
     line-height: 1;
   }
-  .leading-snug {
-    --tw-leading: var(--leading-snug);
-    line-height: var(--leading-snug);
-  }
   .leading-tight {
     --tw-leading: var(--leading-tight);
     line-height: var(--leading-tight);
@@ -912,10 +818,6 @@
     --tw-font-weight: var(--font-weight-light);
     font-weight: var(--font-weight-light);
   }
-  .font-medium {
-    --tw-font-weight: var(--font-weight-medium);
-    font-weight: var(--font-weight-medium);
-  }
   .font-normal {
     --tw-font-weight: var(--font-weight-normal);
     font-weight: var(--font-weight-normal);
@@ -923,10 +825,6 @@
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
-  }
-  .tracking-wide {
-    --tw-tracking: var(--tracking-wide);
-    letter-spacing: var(--tracking-wide);
   }
   .text-body-text {
     color: var(--color-body-text);
@@ -960,9 +858,6 @@
   }
   .text-white {
     color: var(--color-white);
-  }
-  .uppercase {
-    text-transform: uppercase;
   }
   .italic {
     font-style: italic;
@@ -1037,36 +932,6 @@
       outline-style: none;
     }
   }
-  .sm\:flex {
-    @media (width >= 40rem) {
-      display: flex;
-    }
-  }
-  .sm\:max-w-lg {
-    @media (width >= 40rem) {
-      max-width: var(--container-lg);
-    }
-  }
-  .sm\:flex-row {
-    @media (width >= 40rem) {
-      flex-direction: row;
-    }
-  }
-  .sm\:items-start {
-    @media (width >= 40rem) {
-      align-items: flex-start;
-    }
-  }
-  .sm\:justify-center {
-    @media (width >= 40rem) {
-      justify-content: center;
-    }
-  }
-  .sm\:gap-10 {
-    @media (width >= 40rem) {
-      gap: calc(var(--spacing) * 10);
-    }
-  }
   .sm\:text-3xl {
     @media (width >= 40rem) {
       font-size: var(--text-3xl);
@@ -1103,19 +968,9 @@
       margin-inline: calc(var(--spacing) * 0) !important;
     }
   }
-  .md\:mx-auto {
-    @media (width >= 48rem) {
-      margin-inline: auto;
-    }
-  }
   .md\:mt-10 {
     @media (width >= 48rem) {
       margin-top: calc(var(--spacing) * 10);
-    }
-  }
-  .md\:mt-12 {
-    @media (width >= 48rem) {
-      margin-top: calc(var(--spacing) * 12);
     }
   }
   .md\:mt-\[10rem\] {
@@ -1153,14 +1008,19 @@
       display: none;
     }
   }
+  .md\:h-24 {
+    @media (width >= 48rem) {
+      height: calc(var(--spacing) * 24);
+    }
+  }
   .md\:h-full {
     @media (width >= 48rem) {
       height: 100%;
     }
   }
-  .md\:min-h-\[800px\] {
+  .md\:max-h-24 {
     @media (width >= 48rem) {
-      min-height: 800px;
+      max-height: calc(var(--spacing) * 24);
     }
   }
   .md\:w-1\/2 {
@@ -1183,19 +1043,14 @@
       width: calc(5/10 * 100%);
     }
   }
-  .md\:w-6\/15 {
-    @media (width >= 48rem) {
-      width: calc(6/15 * 100%);
-    }
-  }
-  .md\:w-7\/5 {
-    @media (width >= 48rem) {
-      width: calc(7/5 * 100%);
-    }
-  }
   .md\:w-7\/15 {
     @media (width >= 48rem) {
       width: calc(7/15 * 100%);
+    }
+  }
+  .md\:w-24 {
+    @media (width >= 48rem) {
+      width: calc(var(--spacing) * 24);
     }
   }
   .md\:w-auto {
@@ -1213,24 +1068,9 @@
       max-width: var(--container-2xl);
     }
   }
-  .md\:max-w-6xl {
-    @media (width >= 48rem) {
-      max-width: var(--container-6xl);
-    }
-  }
-  .md\:max-w-7xl {
-    @media (width >= 48rem) {
-      max-width: var(--container-7xl);
-    }
-  }
   .md\:grid-cols-2 {
     @media (width >= 48rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
-    }
-  }
-  .md\:flex-col {
-    @media (width >= 48rem) {
-      flex-direction: column;
     }
   }
   .md\:flex-row {
@@ -1258,6 +1098,11 @@
       gap: calc(var(--spacing) * 20);
     }
   }
+  .md\:gap-\[4rem\] {
+    @media (width >= 48rem) {
+      gap: 4rem;
+    }
+  }
   .md\:border-0 {
     @media (width >= 48rem) {
       border-style: var(--tw-border-style);
@@ -1280,19 +1125,9 @@
       padding: calc(var(--spacing) * 0);
     }
   }
-  .md\:px-3 {
-    @media (width >= 48rem) {
-      padding-inline: calc(var(--spacing) * 3);
-    }
-  }
   .md\:px-8 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 8);
-    }
-  }
-  .md\:py-20 {
-    @media (width >= 48rem) {
-      padding-block: calc(var(--spacing) * 20);
     }
   }
   .md\:py-\[7rem\] {
@@ -1300,27 +1135,10 @@
       padding-block: 7rem;
     }
   }
-  .md\:pt-20 {
-    @media (width >= 48rem) {
-      padding-top: calc(var(--spacing) * 20);
-    }
-  }
-  .md\:text-4xl {
-    @media (width >= 48rem) {
-      font-size: var(--text-4xl);
-      line-height: var(--tw-leading, var(--text-4xl--line-height));
-    }
-  }
   .md\:text-base {
     @media (width >= 48rem) {
       font-size: var(--text-base);
       line-height: var(--tw-leading, var(--text-base--line-height));
-    }
-  }
-  .md\:text-xl {
-    @media (width >= 48rem) {
-      font-size: var(--text-xl);
-      line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
   .lg\:absolute {
@@ -1356,11 +1174,6 @@
   .lg\:block {
     @media (width >= 64rem) {
       display: block;
-    }
-  }
-  .lg\:grid {
-    @media (width >= 64rem) {
-      display: grid;
     }
   }
   .lg\:hidden {
@@ -1418,11 +1231,6 @@
       grid-template-columns: repeat(2, minmax(0, 1fr));
     }
   }
-  .lg\:flex-col {
-    @media (width >= 64rem) {
-      flex-direction: column;
-    }
-  }
   .lg\:flex-row {
     @media (width >= 64rem) {
       flex-direction: row;
@@ -1443,29 +1251,14 @@
       padding-inline: calc(var(--spacing) * 12);
     }
   }
-  .lg\:py-28 {
-    @media (width >= 64rem) {
-      padding-block: calc(var(--spacing) * 28);
-    }
-  }
   .lg\:pt-16 {
     @media (width >= 64rem) {
       padding-top: calc(var(--spacing) * 16);
     }
   }
-  .lg\:pt-28 {
-    @media (width >= 64rem) {
-      padding-top: calc(var(--spacing) * 28);
-    }
-  }
   .lg\:pt-\[4rem\] {
     @media (width >= 64rem) {
       padding-top: 4rem;
-    }
-  }
-  .lg\:pb-10 {
-    @media (width >= 64rem) {
-      padding-bottom: calc(var(--spacing) * 10);
     }
   }
   .lg\:text-left {
@@ -1648,10 +1441,6 @@ a {
   syntax: "*";
   inherits: false;
 }
-@property --tw-tracking {
-  syntax: "*";
-  inherits: false;
-}
 @property --tw-shadow {
   syntax: "*";
   inherits: false;
@@ -1781,7 +1570,44 @@ a {
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
-      --tw-tracking: initial;
+      --tw-shadow: 0 0 #0000;
+      --tw-shadow-color: initial;
+      --tw-shadow-alpha: 100%;
+      --tw-inset-shadow: 0 0 #0000;
+      --tw-inset-shadow-color: initial;
+      --tw-inset-shadow-alpha: 100%;
+      --tw-ring-color: initial;
+      --tw-ring-shadow: 0 0 #0000;
+      --tw-inset-ring-color: initial;
+      --tw-inset-ring-shadow: 0 0 #0000;
+      --tw-ring-inset: initial;
+      --tw-ring-offset-width: 0px;
+      --tw-ring-offset-color: #fff;
+      --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-blur: initial;
+      --tw-brightness: initial;
+      --tw-contrast: initial;
+      --tw-grayscale: initial;
+      --tw-hue-rotate: initial;
+      --tw-invert: initial;
+      --tw-opacity: initial;
+      --tw-saturate: initial;
+      --tw-sepia: initial;
+      --tw-drop-shadow: initial;
+      --tw-drop-shadow-color: initial;
+      --tw-drop-shadow-alpha: 100%;
+      --tw-drop-shadow-size: initial;
+    }
+  }
+}
+ate-x: initial;
+      --tw-rotate-y: initial;
+      --tw-rotate-z: initial;
+      --tw-skew-x: initial;
+      --tw-skew-y: initial;
+      --tw-border-style: solid;
+      --tw-leading: initial;
+      --tw-font-weight: initial;
       --tw-shadow: 0 0 #0000;
       --tw-shadow-color: initial;
       --tw-shadow-alpha: 100%;
