space between partners logos

--- a/Views/Partials/blocklist/Components/PartnersSection.cshtml
+++ b/Views/Partials/blocklist/Components/PartnersSection.cshtml
@@ -11,7 +11,7 @@
     {
 
         <!-- DESKTOP VIEW -->
-        <div class="hidden md:flex max-w-7xl mx-auto px-4 md:gap-[4rem] mt-[2rem] md:mt-[10rem] mb-5 md:mb-10 flex-col items-center md:flex-row justify-center">
+        <div class="hidden md:flex max-w-7xl mx-auto px-4 gap-[4rem] mt-[2rem] md:mt-[10rem] mb-5 md:mb-10 flex-col items-center md:flex-row justify-center">
             @foreach (var blockListItem in partnerList)
             {
                 var partnerContent = blockListItem.Content; 
