fixed sliders in partners section

--- a/Views/Partials/blocklist/Components/PartnersSection.cshtml
+++ b/Views/Partials/blocklist/Components/PartnersSection.cshtml
@@ -24,8 +24,8 @@
 
         <!--MOBILE SLIDER VIEW-->
         <div class="block md:hidden mt-[2rem] mb-5">
-            <div class="swiper serviceSwiper">
-                <div class="swiper-wrapper flex items-center">
+            <div class="swiper partnerSwiper w-full">
+                <div class="swiper-wrapper items-center">
                     @foreach (var blockListItem in partnerList)
                     {
                         var partnerContent = blockListItem.Content;
