--- a/Views/Partials/blocklist/Components/Partner.cshtml
+++ b/Views/Partials/blocklist/Components/Partner.cshtml
@@ -7,7 +7,7 @@
     var content = Model;
 }
 
-<div class="flex flex-col w-16 h-16 md:w-24 md:h-24 cursor-pointer">
+<div class="flex flex-col md:w-24 md:h-24 items-center cursor-pointer">
     @if (content.PartnerImage != null)
     {
         <img src="@content.PartnerImage.Url()" alt="@content.PartnerItemName" class="object-contain mx-auto" />
