--- a/Views/Partials/blocklist/Components/TeamMember.cshtml
+++ b/Views/Partials/blocklist/Components/TeamMember.cshtml
@@ -7,7 +7,7 @@
 <div class="flex flex-col h-full border-2 border-white-100">
     @if (content.TeamMemberImage != null)
     {
-        <img src="@content.TeamMemberImage.Url()" alt="@content.TeamMemberName" class="w-full object-cover" />
+        <img src="@content.TeamMemberImage.Url()" class="w-full object-cover" />
 
     }
     <div class="p-4">
