email confirmation functionality

--- a/Views/Partials/blocklist/Components/HeroSection.cshtml
+++ b/Views/Partials/blocklist/Components/HeroSection.cshtml
@@ -9,7 +9,7 @@
 	<div class="absolute inset-0">
 		@if (@content.HeroBgImage != null)
 		{
-			<img src="@content.HeroBgImage.Url()" class="hidden md:block  md:h-full md:object-cover" />
+			<img src="@content.HeroBgImage.Url()" class="hidden lg:block w-full h-full object-cover" />
 		}
 
 	</div>
