--- a/Views/Partials/blocklist/Components/TeamSection.cshtml
+++ b/Views/Partials/blocklist/Components/TeamSection.cshtml
@@ -30,7 +30,7 @@
         @if (teamList != null)
         {
             <div class="block md:hidden">
-                <div class="swiper serviceSwiper">
+                <div class="swiper serviceSwiper cursor-pointer">
                     <div class="swiper-wrapper">
                         @foreach (var member in teamList)
                         {
