--- a/Views/Partials/blocklist/Components/ContactQuestionRequest.cshtml
+++ b/Views/Partials/blocklist/Components/ContactQuestionRequest.cshtml
@@ -22,13 +22,13 @@
             @if(TempData["FormSuccess"] != null)
             {
                 <div class="bg-green-50 text-green-700 p-4 mt-2 mb-4 rounded-md">
-                    @TempData["FormSuccess"];
+                    @TempData["FormSuccess"]
                 </div>
             }
             else if(TempData["FormError"] != null)
             {
                 <div class="bg-red-50 text-red-700 p-4 mt-2 mb-4 rounded-md">
-                    @TempData["FormError"];
+                    @TempData["FormError"]
                 </div>
             }
             
